# terrapyn

./: .pre-commit-config.yaml  404.html  LICENSE.md  Makefile  README.md  _test.ipynb  dev-requirements.txt  environment.yml  index.html  mkdocs.yml  pixi.toml  pyproject.toml  pytest-coverage.txt  requirements.txt  setup.py
.github/: docs_publish.yml  test_pypi_publish.yml
.github/workflows/: code_quality_checks.yml  publish_docs.yml  pypi_publish.yml  test_code_quality.yml  test_pypi_publish.yml
docs/: index.md
examples/indices/: spi.ipynb
poetry/: pyproject.toml
search/: search_index.json
terrapyn/: __init__.py  conversion.py  dask.py  dask_utils.py  space.py  stats.py  terrapyn.py  time.py  utils.py
terrapyn/bigquery/: data.py
terrapyn/bq/: data.py  io.py
terrapyn/ee/: data.py  io.py  stats.py  timeseries.py
terrapyn/indices/: _agro.py  spi.py
terrapyn/params/: __init__.py
terrapyn/scoring/: _contingency.py  _scoring.py  metrics.py
terrapyn/stats/: _binning.py
tests/: test_contingency.py  test_conversion.py  test_dask.py  test_dask_utils.py  test_io.py  test_metrics.py  test_scoring.py  test_space.py  test_stats.py  test_terrapyn.py  test_time.py  test_utils.py
tests/data/: KMZ_example.kmz  high_resolution_365_days_test_data.nc  lat_10_lon_10_time_10_D_test_data.nc  lat_2_lon_2_time_15_D_test_data.nc  lat_2_lon_2_time_365_D_test_data.nc  lat_2_lon_2_time_366_D_test_data.nc
tests/indices/: test_agro.py  test_spi.py
tests/stats/: test_binning.py  test_ranking.py  test_stats.py
