[tool.poetry]
name = "terrapyn"
version = "0.1.4"
description="Toolkit to manipulate Earth observations and models."
authors = ["colinahill <colinalastairhill@gmail.com>"]
readme = "README.md"
license="BSD-3-Clause"
packages = [{include = "terrapyn"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
xarray = {extras = ["complete"], version = "^2024.6.0"}
pandas = "^2"
geopandas = "*"
numpy = "*"
scipy = "*"
dask = {extras = ["complete"], version = "^2024.7.0"}
matplotlib = "^3"
bottleneck = "^1"
shapely = "^2"
netcdf4 = "*"
ipykernel = "^6"
pyarrow = "^15"
fiona = "*"
tqdm = "*"
jupyterlab = "^4.1"
rioxarray = "*"
earthengine-api = "^0.1"
polygon-geohasher = "*"
geemap = "*"
google-cloud-bigquery = "^3.20.1"
db-dtypes = "^1.2.0"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
odc-geo = "*"
zarr = "^2.18.2"
gcsfs = "^2024.6.1"
bokeh = "^3.5.0"
openpyxl = "^3.1.5"
distributed = "^2024.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-cov = "^4.0"
isort = "^5"
black = "^23.3"
pre-commit = "^3.2"
freezegun = "^1.2"
nbstripout = "^0.6"
coverage-badge = "^1.1"
ruff = "^0.3"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
# Ignore earth engine directory 'ee'
addopts = "--doctest-modules --cov=terrapyn --cov-branch --cov-report term-missing  -vv --color=yes --ignore=terrapyn/ee"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
