[tool]

[tool.poetry]
name = "terrapyn"
version = "0.0.1"
homepage = "https://github.com/colinahill/terrapyn"
description = "Toolkit to manipulate Earth observations and models."
authors = ["Colin Hill <colinalastairhill@gmail.com>"]
readme = "README.md"
license =  "BSD-3-Clause"
classifiers=[
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
include = [
    "LICENSE",
    "terrapyn/py.typed"
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
importlib_metadata = "*"
numpy = "^1.22.2"
pandas = "^1.4.1"
# xarray = "^0.21.1"
# scipy = "^1.8.0"
# netCDF4 = "^1.5.8"
# h5netcdf = "^0.13.1"
# dask = "*"
# pydap = "*"
# zarr = "*"
# fsspec = "*"
# cftime = "*"
# rasterio = "*"
# cfgrib = "*"
# pooch = "*"
# bottleneck = "*"
# numbagg = "*"
# seaborn = "*"
# nc-time-axis = "*"

# [tool.poetry.extras]
# complete = ["netcdf4", "h5netcdf", "scipy", "pydap", "zarr", "fsspec", "cftime", "rasterio", "cfgrib", "pooch", "bottleneck", "numbagg", "dask", "matplotlib", "seaborn", "nc-time-axis"]

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
flake8-colors = "0.1.6"
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "*"

[tool.black]
line-length=120

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=terrapyn --cov-branch --cov-report term-missing  -vv --color=yes"
#  --cov-fail-under 100
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
